# library_updater

./: .gitignore  Cargo.toml  pyproject.toml  requirements.txt
.github/workflows/: build_docker_image.yml  rust-clippy.yml
docker/: build.dockerfile
scripts/: start.sh
src/: config.rs  main.rs  types.rs  updater.rs  utils.rs
src/app/: views.py
src/app/services/: webhook.py
src/app/services/updaters/: __init__.py  base.py  fl_updater.py  flibusta_updater.py
src/app/services/updaters/utils/: cmd.py  tasks.py  text.py
src/core/: config.py  setup_arq.py
