[package]
name = "library_updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sql-parse = "0.18.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.13.0"
async-trait = "0.1.80"
chrono = "0.4.38"
futures =  "0.3.30"
reqwest = { version = "0.12.4", features = ["stream"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
async-compression = { version = "0.4.8", features = ["futures-io", "gzip"] }
sentry = { version = "0.32.3", features = ["debug-images"] }
lazy_static = "1.4.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio-cron-scheduler = "0.10.0"
axum = "0.7.5"
ammonia = "4.0.0"
maplit = "1.0.2"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
tower-http = { version = "0.5.2", features = ["trace"] }
dotenv = "0.15.0"
