[package]
name = "library_updater"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = 'abort'

[profile.profiling]
inherits = "release"
debug = true
strip = false


[dependencies]
sql-parse = "0.24.0"
tokio = { version = "1.44.2", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14.1"
async-trait = "0.1.88"
chrono = "0.4.40"
futures =  "0.3.31"
reqwest = { version = "0.12.15", features = ["stream"] }
tokio-util = { version = "0.7.14", features = ["compat"] }
async-compression = { version = "0.4.21", features = ["futures-io", "gzip"] }
sentry = { version = "0.41.0", features = ["debug-images"] }
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio-cron-scheduler = "0.14.0"
axum = "0.8.1"
ammonia = "4.0.0"
maplit = "1.0.2"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"]}
sentry-tracing = "0.41.0"

tower-http = { version = "0.6.2", features = ["trace"] }
dotenvy = "0.15.0"
